# aktsql

./: .gitignore  404.html  AGENTS.md  Cargo.toml  README.md  aktsql.db  cloudflare-pages.html  docker-compose.yml  downloads.html  index.html
.github/scripts/: package-linux-appimage.sh  package-macos.sh  package-windows.ps1
.github/workflows/: docs-pages.yml  release.yml
assets/: 404.html-DtjGAqMS.js  README-BTL_6CTP.js  app-DWwNRGPc.js  cloudflare-pages-DJbrkI_x.js  downloads-CroI6vAf.js  getting-started-CeKgmXgd.js  style-BGfIYhjR.css
crates/aktsql_app/: Cargo.toml
crates/aktsql_app/src/: app.rs  connection.rs  connector.rs  i18n.rs  main.rs  persistence.rs  system_metrics.rs  theme.rs  ui.rs
crates/aktsql_app/src/app/: accessors.rs  defaults.rs  message.rs  model.rs  navigation.rs  runtime.rs  schema_edit.rs  sql.rs  tasks.rs  tests.rs  util.rs
crates/aktsql_app/src/app/sql/: alter_table.rs  create_table.rs  database.rs  dialect.rs  query.rs
crates/aktsql_app/src/connection/: driver.rs
crates/aktsql_app/src/i18n/: language.rs  texts.rs
crates/aktsql_app/src/i18n/texts/: en_us.rs  fr_fr.rs  ja_jp.rs  ru_ru.rs  zh_cn.rs
crates/aktsql_app/src/query/: executor.rs  mod.rs  model.rs  schema.rs  workspace.rs
crates/aktsql_app/src/query/details/: helpers.rs
crates/aktsql_app/src/ui/: connections.rs  database_workbench.rs  dialogs.rs  form.rs  generic.rs  query_workspace.rs  results.rs  schema_designer.rs  settings.rs  shell.rs  sidebar.rs
crates/aktsql_app/src/ui/schema_designer/: alter_table.rs  create_table.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  main.rs  persistence.rs  system_metrics.rs
crates/app/src/app/: accessors.rs  defaults.rs  runtime.rs  schema_edit.rs  tests.rs  util.rs
crates/db/: Cargo.toml
crates/db/src/: connector.rs  lib.rs
crates/db/src/query/: connect.rs  details.rs  mod.rs  result.rs
crates/engine/: Cargo.toml
crates/engine/src/: connection_report.rs  i18n.rs  lib.rs  message.rs  navigation.rs  product.rs  query.rs  schema.rs  theme_mode.rs  workbench.rs
crates/sql/: Cargo.toml
crates/sql/src/: alter_table.rs  create_table.rs  database.rs  lib.rs  query.rs
crates/ui/: Cargo.toml
crates/ui/src/: i18n.rs  lib.rs  theme.rs  view.rs
docs-site/: README.md  package-lock.json  package.json  wrangler.jsonc
docs-site/docs/: README.md  cloudflare-pages.md  downloads.md
docs-site/docs/.vuepress/: config.js
docs-site/docs/guide/: getting-started.md
docs/product/: aktsql-requirement-slices.md  database-common-denominator-highlights.md  table-create-alter-plan.md
guide/: getting-started.html
openspec/: config.yaml
packaging/linux/: aktsql.desktop
packaging/windows/: AktSQL.wxs
stitch_aktsql_database_management/: aktsql_project_specs.md
stitch_aktsql_database_management/aktsql_appearance_settings/: code.html
stitch_aktsql_database_management/aktsql_console_dark_mode/: code.html
stitch_aktsql_database_management/aktsql_console_light_mode/: code.html
stitch_aktsql_database_management/aktsql_logo/: code.html
stitch_aktsql_database_management/crimson_horizon/: DESIGN.md
(+52 files in other folders)
