[workspace]
members = ["crates/aktsql_app"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/AktSQL/aktsql"

[workspace.dependencies]
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "svg",
] }

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3
