[workspace]
members = [
    "crates/app",
    "crates/engine",
    "crates/sql",
    "crates/db",
    "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/AktSQL/aktsql"

[workspace.dependencies]
engine = { path = "crates/engine" }
sql = { path = "crates/sql" }
db = { path = "crates/db" }
akt_ui = { package = "ui", path = "crates/ui" }
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "svg",
] }
mongodb = { version = "2.8", default-features = false, features = ["sync"] }
mysql = "25"
postgres = "0.19"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["rt"] }

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3
