[package]
name = "aktsql"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AktSQL Database Management desktop application."

[[bin]]
name = "aktsql"
path = "src/main.rs"

[dependencies]
iced.workspace = true
libc = "0.2"
mongodb = { version = "2.8", default-features = false, features = ["sync"] }
mysql = "25"
postgres = "0.19"
rusqlite = "0.31.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["rt"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
